--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Data-Driven Dynamics & Control 
-email: mohammadai2573@gmail.com
+title: Data-Driven Dynamics, Modeling & Control 
+email: mahdighane28@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # The site is served from the root
-url: "https://bahmoh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://dynamo-hvl.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  BahMoh
+github_username:  karengh128
 
 include:
   - .htaccess
