--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,12 +1,6 @@
 - name: Mahdi Ghane
   photo: Dr_Ghane_high_res.png
-  info: Associate Professor, started June 2021
-  number_email: 1
-  email1: mahdi.Ghane@hvl.no
-  # email2: mahdighane28@gmail.com
-  HVL_website: "https://www.hvl.no/en/employee/?user=Mahdi.Ghane"
-  # google_scholar: x
-  number_educ: 3
-  education1: 2018 Ph.D. Marine Cybernetics Technology, NTNU-MIT-Statoil PhD Fellow, Centre for Autonomous Marine Operations and Systems, NTNU.
-  education2: 2009 M.Sc. Mechatronics Engineering, K.N.Toosi University of Technology, Tehran (ranked 1st).
-  education3: 2007 B.Sc. Electrical Engineering, Ferdowsi University of Mashhad (top student).
+  role: Lab Director
+  info: Associate Professor, Automation & Robotics
+  email: mahdi.ghane@hvl.no
+  website: https://www.hvl.no/en/employee/?user=Mahdi.Ghane
